layout changes to avoid horizontal scrolling

--- a/banano.css
+++ b/banano.css
@@ -14,7 +14,7 @@
 
 body {
   width: 800px;
-  max-width: 850px;
+  max-width: 750px;
   height: auto;
   background: url(https://banano.cc/assets/bg-faucet.svg);
   font-family: "Banfont";
@@ -91,6 +91,7 @@ main {
   position: relative;
   transition: all 400ms;
   margin-top: 4px;
+  width: 90%;
 }
 .banano__user.close {
   opacity: 0;
@@ -113,7 +114,7 @@ h2 {
   font-weight: bold;
   color: black;
   padding-right: 10px;
-  width: 150px;
+  width: 200px;
 }
 
 h1 {
@@ -130,6 +131,8 @@ h3 {
 .banano__info--address {
   font-family: "BanAddress";
   font-size: 14px;
+  max-width: 50%;
+  word-break: break-all;
 }
 
 .banano__info--status::before {
